refactor: infra 모듈 1차 분리