@@ -1,18 +1,20 @@
-package usw.suwiki.global.config;
+package usw.suwiki.infra.caffeine.config;
 
 import com.github.benmanes.caffeine.cache.Caffeine;
-import java.util.Arrays;
-import java.util.List;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import org.springframework.cache.CacheManager;
+import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.cache.caffeine.CaffeineCache;
 import org.springframework.cache.support.SimpleCacheManager;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.TimeUnit;
+
+@EnableCaching
 @Configuration
-public class CacheConfig {
+public class CaffeineConfig {
 
     @Bean
     public CacheManager cacheManager() {
@@ -24,7 +26,7 @@ public class CacheConfig {
                     .build()
                 )
             )
-            .collect(Collectors.toList());
+            .toList();
         cacheManager.setCaches(caches);
         return cacheManager;
     }
